@@ -27,7 +27,7 @@ module lincoa_mod
 !
 ! Started: February 2022
 !
-! Last Modified: Sunday, April 17, 2022 PM01:11:38
+! Last Modified: Sunday, May 22, 2022 PM11:31:24
 !--------------------------------------------------------------------------------------------------!
 
 implicit none
@@ -115,6 +115,7 @@ use, non_intrinsic :: debug_mod, only : assert, warning
 use, non_intrinsic :: evaluate_mod, only : moderatex
 use, non_intrinsic :: history_mod, only : prehist
 use, non_intrinsic :: infnan_mod, only : is_nan, is_finite, is_posinf
+use, non_intrinsic :: info_mod, only : ZERO_LINEAR_CONSTRAINT
 use, non_intrinsic :: linalg_mod, only : inprod
 use, non_intrinsic :: memory_mod, only : safealloc
 use, non_intrinsic :: pintrf_mod, only : OBJ
@@ -367,7 +368,7 @@ if (m > 0) then
         temp = sum(A_loc(:, j)**2)
         if (temp <= 0) then
             if (present(info)) then
-                info = 12
+                info = ZERO_LINEAR_CONSTRAINT
             end if
             return
         end if
